<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:gravity="center"
    android:padding="30dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/splashnotext"
            android:layout_centerHorizontal="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias=".15"
            android:contentDescription="@string/logo_desc"/>

        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="55sp"
            android:textStyle="bold"
            android:textColor="#2d3e50"
            app:layout_constraintTop_toBottomOf="@id/main_logo"
            />
        <com.haki.storyapp.customView.MyEmailEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@drawable/et_corner"
            android:inputType="textEmailAddress"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"
            android:textColorHint="#696969"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/main_title"/>

        <com.haki.storyapp.customView.MyPwEditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/et_corner"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"
            android:textColorHint="#696969"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/et_email"/>

        <com.haki.storyapp.customView.MyButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:paddingVertical="15dp"
            android:layout_marginTop="25dp"
            app:cornerRadius="10dp"
            android:textSize="18sp"
            android:backgroundTint="@color/mainCol"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/et_pass"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/btn_login"
            app:layout_constraintBottom_toBottomOf="@id/btn_login"
            android:paddingVertical="10dp"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/secCol"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/askSign"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/secCol"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>