...
            app:titleCentered="true"
            />
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_story"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/story_item"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/secCol"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/secCol"
        android:layout_marginBottom="30dp"
...
